--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,41 @@
 {
   "root": true,
-  "ignorePatterns": ["projects/**/*", "**/*.js"],
+  "ignorePatterns": [
+    "projects/**/*",
+    "**/*.js"
+  ],
   "overrides": [
     {
-      "files": ["*.ts"],
+      "files": [
+        "*.ts"
+      ],
       "parserOptions": {
-        "project": ["tsconfig.json", "e2e/tsconfig.json"],
+        "project": [
+          "tsconfig.json",
+          "e2e/tsconfig.json"
+        ],
         "createDefaultProgram": true
       },
-      "extends": ["plugin:@angular-eslint/recommended", "plugin:@angular-eslint/template/process-inline-templates"],
+      "extends": [
+        "plugin:@angular-eslint/recommended",
+        "plugin:@angular-eslint/template/process-inline-templates"
+      ],
       "rules": {
-        "object-shorthand": ["error"],
-        "object-curly-spacing": ["error", "always"],
-        "arrow-parens": ["error", "as-needed"],
-        "brace-style": ["off", "off"],
+        "object-shorthand": [
+          "error"
+        ],
+        "object-curly-spacing": [
+          "error",
+          "always"
+        ],
+        "arrow-parens": [
+          "error",
+          "as-needed"
+        ],
+        "brace-style": [
+          "off",
+          "off"
+        ],
         "id-blacklist": "off",
         "id-match": "off",
         "import/order": "off",
@@ -22,13 +44,36 @@
         "newline-per-chained-call": "off",
         "no-extra-semi": "off",
         "no-irregular-whitespace": "off",
-        "no-trailing-spaces": ["error", { "ignoreComments": true, "skipBlankLines": true }],
+        "no-trailing-spaces": [
+          "error",
+          {
+            "ignoreComments": true,
+            "skipBlankLines": true
+          }
+        ],
         "no-underscore-dangle": "off",
-        "space-in-parens": ["off", "never"],
-        "quotes": ["error", "single", { "allowTemplateLiterals": true, "avoidEscape": true }],
-        "no-console": ["error"],
-        "curly": ["error", "multi-line"],
-        "no-useless-constructor": ["off"],
+        "space-in-parens": [
+          "off",
+          "never"
+        ],
+        "quotes": [
+          "error",
+          "single",
+          {
+            "allowTemplateLiterals": true,
+            "avoidEscape": true
+          }
+        ],
+        "no-console": [
+          "error"
+        ],
+        "curly": [
+          "error",
+          "multi-line"
+        ],
+        "no-useless-constructor": [
+          "off"
+        ],
         "comma-dangle": [
           "error",
           {
@@ -39,81 +84,158 @@
             "exports": "always-multiline"
           }
         ],
-        "arrow-body-style": ["error", "as-needed"],
-        "prefer-arrow-callback": ["error"],
-        "no-shadow": ["off"],
-        "prefer-const": ["error", { "destructuring": "all" }],
-        "eqeqeq": ["error", "always", { "null": "ignore" }],
-        "@typescript-eslint/explicit-member-accessibility": ["off", { "accessibility": "explicit" }],
+        "arrow-body-style": [
+          "error",
+          "as-needed"
+        ],
+        "prefer-arrow-callback": [
+          "error"
+        ],
+        "no-shadow": [
+          "off"
+        ],
+        "prefer-const": [
+          "error",
+          {
+            "destructuring": "all"
+          }
+        ],
+        "eqeqeq": [
+          "error",
+          "always",
+          {
+            "null": "ignore"
+          }
+        ],
+        "@typescript-eslint/explicit-member-accessibility": [
+          "off",
+          {
+            "accessibility": "explicit"
+          }
+        ],
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/unified-signatures": "off",
-        "@typescript-eslint/no-useless-constructor": ["off"],
+        "@typescript-eslint/no-useless-constructor": [
+          "off"
+        ],
         "@typescript-eslint/interface-name-prefix": "off",
-        "@typescript-eslint/no-explicit-any": ["off"],
-        "@typescript-eslint/prefer-optional-chain": ["warn"],
-        "@typescript-eslint/explicit-module-boundary-types": ["off"],
-        "@typescript-eslint/no-shadow": ["error"],
-        "@typescript-eslint/consistent-type-assertions": ["error", { "assertionStyle": "as" }],
-        "@typescript-eslint/no-inferrable-types": ["error"],
+        "@typescript-eslint/no-explicit-any": [
+          "off"
+        ],
+        "@typescript-eslint/prefer-optional-chain": [
+          "warn"
+        ],
+        "@typescript-eslint/explicit-module-boundary-types": [
+          "off"
+        ],
+        "@typescript-eslint/no-shadow": [
+          "error"
+        ],
+        "@typescript-eslint/consistent-type-assertions": [
+          "error",
+          {
+            "assertionStyle": "as"
+          }
+        ],
+        "@typescript-eslint/no-inferrable-types": [
+          "error"
+        ],
         "@typescript-eslint/naming-convention": [
           "error",
           {
             "selector": "default",
-            "format": ["camelCase"]
+            "format": [
+              "camelCase"
+            ]
           },
           {
             "selector": "variable",
-            "format": ["camelCase", "UPPER_CASE"]
+            "format": [
+              "camelCase",
+              "UPPER_CASE"
+            ]
           },
           {
             "selector": "variable",
-            "modifiers": ["const"],
-            "format": ["camelCase", "UPPER_CASE", "PascalCase"]
+            "modifiers": [
+              "const"
+            ],
+            "format": [
+              "camelCase",
+              "UPPER_CASE",
+              "PascalCase"
+            ]
           },
           {
             "selector": "parameter",
-            "format": ["camelCase"],
+            "format": [
+              "camelCase"
+            ],
             "leadingUnderscore": "allow"
           },
           {
             "selector": "memberLike",
-            "modifiers": ["private"],
-            "format": ["camelCase"],
+            "modifiers": [
+              "private"
+            ],
+            "format": [
+              "camelCase"
+            ],
             "leadingUnderscore": "require"
           },
           {
             "selector": "memberLike",
-            "modifiers": ["protected"],
-            "format": ["camelCase"],
+            "modifiers": [
+              "protected"
+            ],
+            "format": [
+              "camelCase"
+            ],
             "leadingUnderscore": "allow"
           },
           {
             "selector": "memberLike",
-            "format": ["camelCase"],
+            "format": [
+              "camelCase"
+            ],
             "leadingUnderscore": "allow"
           },
           {
             "selector": "typeLike",
-            "format": ["PascalCase"]
+            "format": [
+              "PascalCase"
+            ]
           },
           {
             "selector": "property",
-            "modifiers": ["static"],
+            "modifiers": [
+              "static"
+            ],
             "format": null
           },
           {
             "selector": "parameterProperty",
-            "modifiers": ["private"],
-            "format": ["camelCase"],
+            "modifiers": [
+              "private"
+            ],
+            "format": [
+              "camelCase"
+            ],
             "leadingUnderscore": "allow"
           },
           {
             "selector": "enumMember",
-            "format": ["camelCase", "PascalCase"]
+            "format": [
+              "camelCase",
+              "PascalCase"
+            ]
           },
           {
             "selector": "function",
-            "format": ["camelCase", "PascalCase"]
+            "format": [
+              "camelCase",
+              "PascalCase"
+            ]
           }
         ],
         "@typescript-eslint/member-ordering": [
@@ -121,60 +243,48 @@
           {
             "default": [
               "signature",
-
               "private-constructor",
               "protected-constructor",
               "public-constructor",
               "constructor",
-
               "private-decorated-field",
               "private-abstract-field",
               "private-instance-field",
               "private-field",
-
               "protected-decorated-field",
               "protected-abstract-field",
               "protected-instance-field",
               "protected-field",
-
               "public-decorated-field",
               "public-abstract-field",
               "public-instance-field",
               "public-field",
-
               "decorated-field",
               "field",
-
               "private-decorated-method",
               "private-instance-method",
               "private-abstract-method",
               "private-method",
-
               "protected-decorated-method",
               "protected-instance-method",
               "protected-abstract-method",
               "protected-method",
-
               "public-decorated-method",
               "public-instance-method",
               "public-abstract-method",
               "public-method",
-
               "decorated-method",
               "instance-method",
               "abstract-method",
               "method",
-
               "private-static-field",
               "protected-static-field",
               "public-static-field",
               "static-field",
-
               "private-static-method",
               "protected-static-method",
               "public-static-method",
               "static-method",
-
               "instance-field",
               "abstract-field"
             ]
@@ -197,29 +307,72 @@
             "allowHigherOrderFunctions": true
           }
         ],
-        "@angular-eslint/component-selector": ["off"],
-        "@angular-eslint/directive-selector": ["off"],
-        "@angular-eslint/directive-class-suffix": ["off"],
-        "@angular-eslint/no-host-metadata-property": ["off"],
-        "@angular-eslint/no-input-rename": ["off"],
-        "@angular-eslint/no-inputs-metadata-property": ["off"],
-        "@angular-eslint/component-class-suffix": ["off"],
-        "@angular-eslint/prefer-on-push-component-change-detection": ["warn"],
-        "@angular-eslint/use-lifecycle-interface": ["warn"],
-        "@angular-eslint/no-conflicting-lifecycle": ["warn"],
-        "@angular-eslint/contextual-decorator": ["error"],
-        "@angular-eslint/prefer-output-readonly": ["warn"],
-        "@angular-eslint/component-max-inline-declarations": ["error", { "animations": 20, "styles": 8, "template": 5 }]
+        "@angular-eslint/component-selector": [
+          "off"
+        ],
+        "@angular-eslint/directive-selector": [
+          "off"
+        ],
+        "@angular-eslint/directive-class-suffix": [
+          "off"
+        ],
+        "@angular-eslint/no-host-metadata-property": [
+          "off"
+        ],
+        "@angular-eslint/no-input-rename": [
+          "off"
+        ],
+        "@angular-eslint/no-inputs-metadata-property": [
+          "off"
+        ],
+        "@angular-eslint/component-class-suffix": [
+          "off"
+        ],
+        "@angular-eslint/prefer-on-push-component-change-detection": [
+          "warn"
+        ],
+        "@angular-eslint/use-lifecycle-interface": [
+          "warn"
+        ],
+        "@angular-eslint/no-conflicting-lifecycle": [
+          "warn"
+        ],
+        "@angular-eslint/contextual-decorator": [
+          "error"
+        ],
+        "@angular-eslint/prefer-output-readonly": [
+          "warn"
+        ],
+        "@angular-eslint/component-max-inline-declarations": [
+          "error",
+          {
+            "animations": 20,
+            "styles": 8,
+            "template": 5
+          }
+        ]
       }
     },
     {
-      "files": ["*.html"],
-      "extends": ["plugin:@angular-eslint/template/recommended"],
+      "files": [
+        "*.html"
+      ],
+      "extends": [
+        "plugin:@angular-eslint/template/recommended"
+      ],
       "rules": {
-        "@angular-eslint/template/no-negated-async": ["off"],
-        "@angular-eslint/template/no-call-expression": ["error"],
-        "@angular-eslint/template/use-track-by-function": ["warn"],
-        "@angular-eslint/template/banana-in-box": ["error"]
+        "@angular-eslint/template/no-negated-async": [
+          "off"
+        ],
+        "@angular-eslint/template/no-call-expression": [
+          "error"
+        ],
+        "@angular-eslint/template/use-track-by-function": [
+          "warn"
+        ],
+        "@angular-eslint/template/banana-in-box": [
+          "error"
+        ]
       }
     }
   ]
